fix scrollbar

--- a/src/style/navbar.scss
+++ b/src/style/navbar.scss
@@ -1,7 +1,7 @@
 .main-navbar {
   position: fixed;
   top: 0;
-  width: 100vw;
+  width: calc(100vw - 8px);
   z-index: 1;
   background-color: rgba(255, 255, 255, 0.75);
   backdrop-filter: blur(10px);
